--- a/gui_source/guimainwindow.ui
+++ b/gui_source/guimainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Nauz File Detector</string>
+   <string notr="true">XAPKDetector</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
