--- a/gui_source/guimainwindow.ui
+++ b/gui_source/guimainwindow.ui
@@ -50,7 +50,7 @@
             </font>
            </property>
            <property name="text">
-            <string>...</string>
+            <string notr="true">...</string>
            </property>
           </widget>
          </item>
@@ -90,7 +90,7 @@
       <item>
        <widget class="QPushButton" name="pushButtonHex">
         <property name="text">
-         <string>Hex</string>
+         <string notr="true">Hex</string>
         </property>
        </widget>
       </item>
