--- a/gui_source/guimainwindow.ui
+++ b/gui_source/guimainwindow.ui
@@ -75,6 +75,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="pushButtonClassesDex">
+        <property name="text">
+         <string notr="true">Classes.dex</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
