--- a/gui_source/guimainwindow.ui
+++ b/gui_source/guimainwindow.ui
@@ -137,6 +137,13 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
+       <widget class="QPushButton" name="pushButtonShortcuts">
+        <property name="text">
+         <string>Shortcuts</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="pushButtonOptions">
         <property name="text">
          <string>Options</string>
