--- a/gui_source/dialogoptions.ui
+++ b/gui_source/dialogoptions.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>234</width>
-    <height>301</height>
+    <width>288</width>
+    <height>343</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -116,6 +116,37 @@
       </property>
       <item>
        <widget class="QComboBox" name="comboBoxLanguage"/>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBoxSearchSignatures">
+     <property name="title">
+      <string>Search signatures</string>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_6">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLineEdit" name="lineEditSearchSignatures"/>
+      </item>
+      <item>
+       <widget class="QToolButton" name="toolButtonSearchSignatures">
+        <property name="text">
+         <string notr="true">...</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
