--- a/gui_source/dialogabout.ui
+++ b/gui_source/dialogabout.ui
@@ -3,7 +3,7 @@
  <class>DialogAbout</class>
  <widget class="QDialog" name="DialogAbout">
   <property name="windowModality">
-   <enum>Qt::ApplicationModal</enum>
+   <enum>Qt::WindowModal</enum>
   </property>
   <property name="geometry">
    <rect>
