--- a/gui_source/dialogabout.ui
+++ b/gui_source/dialogabout.ui
@@ -66,7 +66,7 @@
           </font>
          </property>
          <property name="text">
-          <string>XAPKDetector</string>
+          <string notr="true">XAPKDetector</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
