--- a/gui_source/dialogabout.ui
+++ b/gui_source/dialogabout.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>636</width>
-    <height>433</height>
+    <width>613</width>
+    <height>481</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,19 +40,6 @@
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
      </item>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -86,7 +73,7 @@
        <item>
         <widget class="QLabel" name="labelInfo">
          <property name="text">
-          <string notr="true">&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Copyright(C) 2019-2021 hors&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Website: &lt;/span&gt;&lt;a href=&quot;http://ntinfo.biz&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;http://ntinfo.biz&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Bugerports: &lt;/span&gt;&lt;a href=&quot;mailto:horsicq@gmail.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;horsicq@gmail.com&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Donate(Paypal): &lt;/span&gt;&lt;a href=&quot;mailto:ntinfo.re@gmail.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;ntinfo.re@gmail.com&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Source code: &lt;/span&gt;&lt;a href=&quot;https://github.com/horsicq/XOpcodeCalc&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;https://github.com/horsicq/XOpcodeCalc&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Thanks:&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Fernando Mercês: &lt;/span&gt;&lt;a href=&quot;https://www.mentebinaria.com.br/&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;https://www.mentebinaria.com.br&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;David Zimmer: &lt;/span&gt;&lt;a href=&quot;http://sandsprite.com/&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;http://sandsprite.com&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;misonothx: &lt;/span&gt;&lt;a href=&quot;https://github.com/miso-xyz&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;https://github.com/miso-xyz&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;FrenchYeti: &lt;/span&gt;&lt;a href=&quot;https://twitter.com/frenchyeti&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;https://twitter.com/frenchyeti&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string notr="true">&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Copyright(C) 2019-2021 hors&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Website: &lt;/span&gt;&lt;a href=&quot;http://ntinfo.biz&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;http://ntinfo.biz&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Bugerports: &lt;/span&gt;&lt;a href=&quot;mailto:horsicq@gmail.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;horsicq@gmail.com&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Donate(Paypal): &lt;/span&gt;&lt;a href=&quot;mailto:ntinfo.re@gmail.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;ntinfo.re@gmail.com&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Source code: &lt;/span&gt;&lt;a href=&quot;https://github.com/horsicq/XAPKDetector&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;https://github.com/horsicq/XAPKDetector&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Thanks:&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Fernando Mercês: &lt;/span&gt;&lt;a href=&quot;https://www.mentebinaria.com.br/&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;https://www.mentebinaria.com.br&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;David Zimmer: &lt;/span&gt;&lt;a href=&quot;http://sandsprite.com/&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;http://sandsprite.com&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;misonothx: &lt;/span&gt;&lt;a href=&quot;https://github.com/miso-xyz&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;https://github.com/miso-xyz&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;FrenchYeti: &lt;/span&gt;&lt;a href=&quot;https://twitter.com/frenchyeti&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#ff0000;&quot;&gt;https://twitter.com/frenchyeti&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="openExternalLinks">
           <bool>true</bool>
